fix: closes the sidebar on mobile if you click outside of it

--- a/components/sidebar/sidebar.scss
+++ b/components/sidebar/sidebar.scss
@@ -1,7 +1,7 @@
 @import "~/styles/mixins";
 
 .sidebar {
-  display: none;
+  display: flex;
   position: fixed;
   top: 0.5rem;
   left: 0.5rem;
@@ -10,11 +10,18 @@
   gap: 1rem;
   padding: 1rem;
   flex-direction: column;
+  opacity: 1;
+  transition: all 150ms ease-in-out;
+  transform-origin: left;
   z-index: 9999;
+
   @apply bg-neutral-content rounded-xl;
 
-  &.open {
-    display: flex;
+  &.closed {
+    transform: scale3d(0, 1, 1);
+    opacity: 0;
+    width: 0%;
+    min-width: 0;
   }
 
   @include md {
@@ -22,7 +29,8 @@
     width: 20%;
     height: auto;
     min-width: 12rem;
-    margin: 2rem 0 2rem 0.75rem;
+    margin: 2rem;
+    margin-right: 0;
   }
 }
 
@@ -48,5 +56,26 @@
   @include md {
     top: 2.5rem;
     left: 2.5rem;
+  }
+}
+
+.sidebar-background {
+  display: block;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100dvw;
+  height: 100dvh;
+  background-color: oklch(var(--pc));
+  opacity: 0.7;
+  cursor: default;
+  z-index: 9998;
+
+  &.hide {
+    display: none;
+  }
+
+  @include md {
+    display: none;
   }
 }
